# stratum-race

./: .gitignore  LICENSE  README.md
collector/: str_race.py  stratum_proxy.py
config/: pools.json  pools.schema.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: LeaderboardTable.vue  NotificationToast.vue  OperatorFilter.vue  PoolFilters.vue  RecentBlocksList.vue  StatsCards.vue  TimeFrameFilter.vue  TimezoneToggle.vue  VantageHealth.vue  VantageSelector.vue
frontend/src/composables/: useTimezone.ts  useVantageNames.ts
frontend/src/services/: WebSocketManager.test.ts  WebSocketManager.ts  config.ts
frontend/src/stores/: raceStore.test.ts  raceStore.ts
frontend/src/types/: index.ts
frontend/src/views/: AboutView.vue  BlockDetailView.vue  CrossVantageView.vue  (+4 more)
lib/: __init__.py  aggregate_stats.py  aggregation.py  local_store.py  race_summary.py
standalone/: __init__.py  aggregator.py  main.py  run.sh  server.py
standalone/packaging/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: conftest.py
tests/parity/: __init__.py  test_aggregate_parity.py
tests/shared/: __init__.py  test_aggregate_stats.py  test_aggregation_boundary.py  test_collector_local.py  test_day_bundles.py  test_local_store.py  test_pool_group_filtering.py  test_rtt_correction.py  test_state_persistence.py
tests/standalone/: __init__.py  test_aggregator.py  test_integration.py  test_main.py  test_server.py
